fix: remove unnecessary z-index on action hover

--- a/src/app/modules/actions/components/action/action.component.scss
+++ b/src/app/modules/actions/components/action/action.component.scss
@@ -36,7 +36,6 @@ $border-length: 8px;
     border: 4px solid white;
     box-shadow: inset 0 0 10px white, 0 0 10px white;
     border-radius: 10%;
-    z-index: 10;
   }
 }
 
